<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Nitrogen OS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App Title -->
    <string name="paranoid_lab_title">Paranoid Lab</string>

    <!-- Categories -->
    <string name="lockscreen_title">Lock screen</string>
    <string name="lockscreen_settings_summary">Customize lockscreen interface</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="misc_settings_summary">Misc uncategorized stuffs</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="qs_panel_settings_summary">Media artwork, Brightness slider, etc</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_settings_summary">Network traffic, Battery styles, etc</string>
    <string name="gestures_title">Gestures</string>
    <string name="gesture_settings_summary">Customize android gesture</string>
    <string name="pa_illustration_summary">Everythings you Need!</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    
    <!-- Game Space -->
    <string name="game_space_title">Game Space</string>
    <string name="game_space_summary">Enhance your gaming experience</string>
    
    <!-- Quick Settings quick pulldown -->
    <string name="quick_settings_quick_pull_down_title">Quick QS pulldown</string>
    <string name="quick_settings_quick_pull_down_summary">Pull down statusbar from right side to expand quick settings</string>

    <!-- Global Actions -->
    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>

    <!-- DT2S on statusbar-->
    <string name="double_tap_sleep_title">Tap to sleep</string>
    <string name="double_tap_sleep_summary">Double-tap anywhere on the status bar to turn off screen</string>

    <!-- Annoying Notifications -->
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>

    <!-- Less boring heads up -->
    <string name="less_boring_heads_up_title">Saner Heads-Up</string>
    <string name="less_boring_heads_up_summary">Disable heads up for all apps except for dialer and messaging</string>
    
    <!-- Statusbar net monitor -->
    <string name="statusbar_ntraffic">Network</string>
    <string name="network_traffic_state_title">Network speed</string>
    <string name="network_traffic_state_summary">Show network speed in the status bar</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_statusbar">Statusbar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>

    <!-- Brightness slider -->
    <string name="qs_show_brightness_title">Brightness slider</string>
    <string name="qs_show_brightness_summary">Brightness slider visibility and settings</string>
    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
    <string name="qs_brightness_position_bottom_summary">Show the brightness slider on the bottom of QS</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show an auto brightness toggle near the brightness slider</string>
</resources>
